# learning_rust

./: Cargo.toml
src/: main.rs
src/api/: mod.rs
src/api/jobs_hub/: handlers.rs  routes.rs
src/core/generic/: handler.rs  routes.rs
src/db/: mongo.rs
src/models/: job.rs
