[package]
name = "backend_with_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.1"
logger = "0.4.0"
futures = "0.3.30"
chrono = "0.4"

[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-runtime"]